--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -1,4 +1,3 @@
-
 @font-face
   font-family: 'Alata'
   font-style: normal
@@ -178,18 +177,22 @@ body
 
 
 .appWrapper
-  height: 100vh
+  min-height: 100vh
   display: grid
   justify-content: center
   grid-template-columns: 1700px
   grid-template-rows: 140px 1fr 100px
   grid-row-gap: 30px
   padding: 0 50px
-  background-blend-mode: color
-  -moz-background-size: 100%
-  -webkit-background-size: 100%
-  -o-background-size: 100%
-  background-size: 100%
+
+
+  &.contacts
+    background: radial-gradient(#000 15%, transparent 16%) 0 0, radial-gradient(#000 15%, transparent 16%) 8px 8px, radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px, radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px
+    background-color: #282828
+    background-size: 16px 16px
+    background-blend-mode: revert
+
+
 
   .navbarWrapper
     position: relative
@@ -199,8 +202,9 @@ body
     height: 100px
     justify-content: space-between
     align-items: center
-    background-color: rgba(255, 255, 255, 0.84)
-    //box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1)
+    background-color: #D6D8D9
+
+
 
 
     .logo
@@ -298,6 +302,7 @@ body
     flex-direction: column
     height: 100%
     position: relative
+
     .background
       z-index: 5
       position: fixed
@@ -394,134 +399,173 @@ body
         align-items: center
 
   .contactsWrapper
-    .background
-      z-index: 1
-      position: fixed
-      top: 0
-      left: 0
-      width: 100%
-      height: 100%
 
-      img
-        z-index: 1
-        width: 100%
-        height: auto
-    h1
-      font-size: 50px
-      font-family: "Raleway", "sans-serif"
-      font-weight: 600
-      color: rgba(255, 255, 255, 0.84)
-      border-bottom: 5px solid #DA251D
+
+    .contactsHeader
+      margin: 30px 0 20px
+      display: inline-flex
+
+      h1
+        position: relative
+        z-index: 2
+        font-size: 50px
+        font-family: "Raleway", "sans-serif"
+        font-weight: 600
+        color: #D6D8D9
+        border-bottom: 5px solid #DA251D
+
     .contactsContent
+      margin-top: 45px
       position: relative
       z-index: 2
+      display: grid
+      grid-template-columns: 2fr 1fr
+
       .leftSide
-        .contacts
-          .block-item
-            .icon
+        display: grid
+        grid-template-columns: 1fr 1fr
+        grid-template-rows: 1fr 1fr
+
+        .block-item
+          display: grid
+          grid-template-columns: 1fr 5fr
+          color: #D6D8D9
+
+          .icon
+
+            font-size: 50px
+
+          .description
+            display: grid
+            grid-template-rows: 1fr 4fr
+
+            a
+              text-decoration: none
+              color: #D6D8D9
+              transition: all 0.25s ease
+              outline: none
+
+              &:hover
+                color: #DA251D
+
 
             .title
+              font-family: "Raleway", "sans-serif"
+              font-size: 22px
+              font-weight: 700
 
             .text
+              font-family: "Scada", "sans-serif"
+              font-size: 18px
+              letter-spacing: 0.5px
+              line-height: 1.4
 
       .rightSide
+        display: flex
+        justify-content: center
+
         .emailFormWrapper
 
     .map
+      position: relative
+      z-index: 2
+      display: grid
+      margin-top: 40px
 
-    .requisites
+    .requisitesWrapper
+      padding-top: 35px
+      border-top: 1px dashed #dadada
+      margin-top: 45px
+      position: relative
+      z-index: 2
+      color: #D6D8D9
+      display: grid
+      grid-template-columns: 1fr 1fr
+      grid-column-gap:
+
+      h2
+        position: relative
+        z-index: 2
+        font-size: 35px
+        font-family: "Raleway", "sans-serif"
+        font-weight: 500
+        color: #D6D8D9
+        border-bottom: 4px solid #DA251D
+        margin-bottom: 25px
+
+      .requisites
+        display: flex
+        flex-direction: column
+
+        .requisitesHeader
+          display: inline-flex
+
+
+        p
+          font-family: "Raleway", "sans-serif"
+          font-size: 27px
+          font-weight: 500
+          line-height: 1.4
+
+
+        span
+          font-family: "Scada", "sans-serif"
+          font-size: 15px
+
+          line-height: 1.4
+          margin-bottom: 10px
+
+      .generalWrapper
+        display: flex
+        justify-content: center
+
+        .general
+          display: flex
+          flex-direction: column
+          align-items: center
+
+          img
+            margin: 20px 0
+            width: auto
+            height: 280px
+
+          h4
+            font-family: "Raleway", "sans-serif"
+            font-size: 27px
+            font-weight: 500
+            line-height: 1.4
 
   .footerWrapper
+    padding-top: 10px
     position: relative
     z-index: 15
     background-color: rgba(0, 0, 0, 0.53)
     height: 100%
-    display: flex
-    justify-content: space-around
-    align-items: center
+    display: grid
+    grid-template-columns: repeat(3, 1fr)
+    justify-content: center
 
-    .phone
+    .footerItem
       display: flex
       flex-direction: column
       align-items: center
       opacity: 0.5
       transition: 0.2s ease-in
 
-      .icon
-        margin-bottom: 10px
-
-        a
-          text-decoration: none
-          font-family: "Scada Bold", "sans-serif"
-          outline: none
-          color: rgba(255, 255, 255, 0.84)
-          font-size: 40px
-
-      .text
-        a
-          text-decoration: none
-          font-family: "Scada Bold", "sans-serif"
-          outline: none
-          color: rgba(255, 255, 255, 0.84)
-          font-size: 16px
-
-      &:hover
-        opacity: 1
-        transition: 0.2s ease-in
-
-
-    .email
-      display: flex
-      flex-direction: column
-      align-items: center
-      opacity: 0.5
-      transition: 0.2s ease-in
+      a
+        text-decoration: none
+        font-family: "Scada Bold", "sans-serif"
+        outline: none
+        color: rgba(255, 255, 255, 0.84)
 
       .icon
         margin-bottom: 10px
 
         a
-          text-decoration: none
-          font-family: "Scada Bold", "sans-serif"
-          outline: none
-          color: rgba(255, 255, 255, 0.84)
           font-size: 40px
 
       .text
         a
-          text-decoration: none
-          font-family: "Scada Bold", "sans-serif"
-          outline: none
-          color: rgba(255, 255, 255, 0.84)
-          font-size: 16px
-
-      &:hover
-        opacity: 1
-        transition: 0.2s ease-in
-
-    .findUs
-      display: flex
-      flex-direction: column
-      align-items: center
-      opacity: 0.5
-      transition: 0.2s ease-in
-
-      .icon
-        margin-bottom: 10px
-
-        a
-          text-decoration: none
-          font-family: "Scada Bold", "sans-serif"
-          outline: none
-          color: rgba(255, 255, 255, 0.84)
-          font-size: 40px
-
-      .text
-        a
-          text-decoration: none
-          font-family: "Scada Bold", "sans-serif"
-          outline: none
-          color: rgba(255, 255, 255, 0.84)
           font-size: 16px
 
       &:hover
@@ -600,6 +644,9 @@ body
             height: 100%
 
         .headerContent
+          &.horizontal
+            margin-top: 70px
+
           .leftSide
             .header
               padding-top: 15px
@@ -614,6 +661,32 @@ body
             .headerIcons
               .iconItemWrapper
                 padding: 8px 0
+
+      .contactsWrapper
+        padding: 0 40px
+
+        .contactsHeader
+          h1
+            font-size: 50px
+
+        .contactsContent
+          .leftSide
+            .block-item
+
+              .icon
+                font-size: 50px
+
+              .description
+                grid-template-rows: 1fr 4fr
+
+                .title
+
+                .text
+                  line-height: 1.2
+
+        .requisitesWrapper
+          .generalWrapper
+            justify-content: flex-end
 
 
 @media (max-width: 1200px)
@@ -664,6 +737,9 @@ body
             height: 100%
 
         .headerContent
+          &.horizontal
+            margin-top: 60px
+
           .leftSide
             .header
               padding-top: 15px
@@ -678,6 +754,52 @@ body
           .rightSide
             justify-content: flex-end
 
+      .contactsWrapper
+        padding: 0 40px
+
+        .contactsHeader
+          h1
+            font-size: 46px
+
+        .contactsContent
+          grid-template-columns: 1fr
+
+          .leftSide
+            .block-item
+              .icon
+                font-size: 65px
+
+              .description
+                grid-template-rows: 1fr 3fr
+
+                .title
+                  font-size: 30px
+                  line-height: 1.4
+
+                .text
+                  font-size: 22px
+                  line-height: 1.3
+
+          .rightSide
+            .emailFormWrapper
+              .requestForm
+                width: 100%
+
+        .requisitesWrapper
+          border-top: none
+          padding-top: 15px
+          h2
+            font-size: 30px
+
+          .requisites
+            p
+              line-height: 1.6
+              font-size: 24px
+
+          .generalWrapper
+            .general
+              h4
+                font-size: 23px
 
 @media (max-width: 1024px)
   .appWrapper
@@ -805,6 +927,7 @@ body
           padding: 0 35px
 
           &.horizontal
+            margin-top: 50px
             grid-template-columns: 1fr 1fr
             padding: 0
 
@@ -813,12 +936,12 @@ body
                 padding-top: 0
 
                 h1
-                  font-size: 48px
+                  font-size: 43px
                   border-bottom: 4px solid #DA251D
                   margin: 0
 
               .headerText
-                padding-top: 28px
+                padding-top: 24px
 
                 h2
                   font-size: 27px
@@ -899,6 +1022,54 @@ body
 
               .responseForm
                 width: 100%
+
+      .contactsWrapper
+        .contactsHeader
+          h1
+            font-size: 40px
+            border-bottom-width: 4px
+
+        .contactsContent
+          grid-template-columns: 1fr
+
+          .leftSide
+            .block-item
+              .icon
+                font-size: 55px
+
+              .description
+                grid-template-rows: 1fr 3fr
+
+                .title
+                  font-size: 25px
+                  line-height: 1.4
+
+                .text
+                  font-size: 18px
+                  line-height: 1.3
+
+          .rightSide
+            .emailFormWrapper
+              .requestForm
+                width: 100%
+
+        .requisitesWrapper
+          h2
+            font-size: 25px
+            border-bottom-width: 2px
+
+          .requisites
+            p
+              line-height: 1.4
+              font-size: 24px
+
+          .generalWrapper
+            .general
+              img
+                height: 250px
+
+              h4
+                font-size: 20px
 
 
 @media (max-width: 930px)
@@ -983,6 +1154,68 @@ body
                 p
                   font-size: 18px
 
+      .contactsWrapper
+        .contactsHeader
+          h1
+            font-size: 40px
+            border-bottom-width: 4px
+
+        .contactsContent
+          grid-template-columns: 1fr
+
+          .leftSide
+            margin-bottom: 20px
+
+            .block-item
+              .icon
+                font-size: 45px
+
+              .description
+                grid-template-rows: 1fr 2fr
+
+                .title
+                  font-size: 22px
+                  line-height: 1.3
+
+                .text
+                  font-size: 16px
+                  line-height: 1.4
+
+          .rightSide
+            .emailFormWrapper
+              .requestForm
+                width: 100%
+
+        .requisitesWrapper
+          h2
+            font-size: 25px
+            border-bottom-width: 2px
+
+          .requisites
+            p
+              line-height: 1.4
+              font-size: 24px
+
+          .generalWrapper
+            .general
+              img
+                height: 250px
+
+              h4
+                font-size: 20px
+
+      .footerWrapper
+        padding-top: 10px
+
+        .footerItem
+          .icon
+            margin-bottom: 5px
+
+            a
+              font-size: 30px
+
+          .text
+            text-align: center
 
 @media (max-width: 767px)
 
@@ -990,7 +1223,7 @@ body
   .appWrapper
     display: grid
     grid-template-columns: 100vw
-    grid-template-rows: 50px 1fr 70px
+    grid-template-rows: 50px 1fr 160px
     row-gap: 20px
     padding: 0
     background-blend-mode: color
@@ -1080,7 +1313,6 @@ body
               transition: all 0.15s ease
               bottom: 9px
 
-
       .homeWrapper
         padding: 0 25px
 
@@ -1157,29 +1389,92 @@ body
           .rightSide
             margin-bottom: 10px
 
+      .contactsWrapper
+        padding: 0 15px
+        .contactsHeader
+          margin: 10px 0 20px
+          h1
+            font-size: 34px
+            border-bottom-width: 4px
 
-    .footerWrapper
-      .findUs
-        .icon
-          margin-bottom: 5px
+        .contactsContent
+          margin-top: 25px
+          grid-template-columns: 1fr
 
-          a
-            font-size: 30px
+          .leftSide
+            margin-bottom: 20px
+
+            .block-item
+              .icon
+                font-size: 37px
+
+              .description
+
+                .title
+                  font-size: 20px
+                  line-height: 1.3
+
+                .text
+                  font-size: 14px
+                  line-height: 1.4
+
+          .rightSide
+            .emailFormWrapper
+              .requestForm
+                width: 100%
+                min-height: 250px
+                .inputField
+                  height: 40px
+                .button
+                  button
+                    height: 40px
+
+        .requisitesWrapper
+          grid-template-columns: 1fr
+
+          h2
+            font-size: 35px
+            border-bottom-width: 2px
+
+          .requisites
+            padding-bottom: 20px
+            border-bottom: 1px dashed #dadada
+            .requisitesHeader
+              justify-content: center
+            p
+              line-height: 1.4
+              font-size: 24px
+
+          .generalWrapper
+            margin-top: 30px
+            justify-content: center
+            .general
 
 
-      .email
-        .icon
-          margin-bottom: 5px
+              img
+                height: 250px
 
-          a
-            font-size: 30px
+              h4
+                font-size: 20px
 
-      .phone
-        .icon
-          margin-bottom: 5px
 
-          a
-            font-size: 30px
+      .footerWrapper
+        grid-template-columns: 1fr
+        grid-template-rows: repeat(3, 1fr)
+        justify-content: left
+        padding: 0 20px
+
+        .footerItem
+          display: flex
+          flex-direction: row
+          align-items: center
+
+          .icon
+            margin-right: 20px
+
+          .text
+            text-align: left
+            line-height: 1.2
 
 
 @media (max-width: 520px)
@@ -1243,44 +1538,26 @@ body
                     &:last-child
                       font-size: 23px
 
+      .contactsWrapper
+        .contactsContent
+          .leftSide
+            grid-template-columns: 1fr
+            grid-template-rows: repeat(4, 1fr)
+            grid-row-gap: 5px
+            .block-item
+              .icon
+                font-size: 50px
+              .description
+                .title
+                  font-size: 25px
+                .text
+                  font-size: 20px
+        .requisitesWrapper
+          h2
+            font-size: 30px
+
       .footerWrapper
-        padding: 0 15px
-        align-items: flex-start
-        justify-content: center
-        flex-direction: column
 
-        .findUs
-          padding-bottom: 10px
-          flex-direction: row
-
-          .icon
-            padding-right: 20px
-            margin-bottom: 5px
-
-            a
-              font-size: 30px
-
-
-        .email
-          padding-bottom: 10px
-          flex-direction: row
-
-          .icon
-            padding-right: 20px
-            margin-bottom: 5px
-
-            a
-              font-size: 30px
-
-        .phone
-          flex-direction: row
-
-          .icon
-            padding-right: 20px
-            margin-bottom: 5px
-
-            a
-              font-size: 30px
 
 @media (max-width: 408px)
   .emailFormWrapper
@@ -1316,6 +1593,23 @@ body
 
                     &:last-child
                       font-size: 21px
+      .contactsWrapper
+        .contactsContent
+          .leftSide
+
+            .block-item
+              .icon
+                font-size: 45px
+              .description
+                .title
+                  font-size: 22px
+                .text
+                  font-size: 17px
+        .requisitesWrapper
+          h2
+            font-size: 27px
+
+
 
 @media (max-width: 361px)
   .emailFormWrapper
@@ -1353,7 +1647,27 @@ body
 
                     &:last-child
                       font-size: 17px
+      .contactsWrapper
+        .contactsContent
+          .leftSide
 
+            .block-item
+              .icon
+                font-size: 40px
+              .description
+                .title
+                  font-size: 20px
+                .text
+                  font-size: 15px
+        .requisitesWrapper
+          h2
+            font-size: 25px
+          .requisites
+            p
+              font-size: 21px
+            span
+              font-size: 13px
+              margin-bottom: 15px
 
 
 
